changed background color

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -8,7 +8,7 @@
     background-color: gray;
 }
 body{
-    background: linear-gradient(aqua, lightblue);
+    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
     padding:50px;
 }
 
