onclick is adding id, but not going to new page

--- a/views/donate.handlebars
+++ b/views/donate.handlebars
@@ -7,7 +7,10 @@
         {{#each flowers}}
         <li class="list-group-item flower-item">
           <span class="flowertext" >{{flower_name}}</span>
-          <img src="{{imageurl_thumbnail}}">
+        
+        
+          <img id="flowerImg" src="{{imageurl_large}}" alt="flowers">
+        
         <button id="flower" class= "btn btn-default btnflower" data-id="{{id}}">Show Detail</button>
         </li>
         <br>
