modified css, flowers are displaying in rows on main page, added form to donate.handlebars, added ids to donate.handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -80,7 +80,7 @@
 <!-- JUMBO -->
     <div class="container">
         <div class="jumbotron">
-            <div class="row">
+            <div class="row main-title">
                 <h1 class="animated pulse"><a href="index.html">Philanthropic Florists</a></h1>
                 <p>Help us by helping others! Dontate flowers today.</p>
             </div>
