--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -62,3 +62,38 @@ body{
         border-top:0 none;
     }
 }
+
+.flower-item {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column;
+    background-color: #BADA55;
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, .55);
+}
+
+.flowertext {
+    background-color: mintcream; 
+    padding: 30px;
+    border-radius: 45%;
+    min-width: 65px;
+}
+
+.flower-item:hover{
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+}
+
+.flowerImg{
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, .5);
+}
+.flowerImg:hover{
+    box-shadow: 5px 6px 7px rgba(0, 0, 0, .5);
+}
+
+.main-title {
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+    padding: 30px;
+    flex-direction: column;
+}
