--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -5,7 +5,7 @@
             {{#each flowers}}
             <div class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
               <div class="card">
-                <a href="/api/flowers/{{id}}"><img class="card-img-top flowerImg" data-id={{id}} src={{imageurl_thumbnail}} alt="flower image"></a>
+                <a href="/donate/{{id}}"><img class="card-img-top flowerImg" data-id={{id}} src={{imageurl_thumbnail}} alt="flower image"></a>
                   <div class="card-block">
                     <h4 class="card-title">{{flower_name}}</h4>
                   </div>
