--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" href="/assets/css/styles.css" type="text/css" />
 		<script src="https://code.jquery.com/jquery.js"></script>
 		<script src="/assets/js/index.js"></script>
+        <script src="/assets/js/donate.js"></script>
 	</head>
 
 	<body>
