added code to get flowerID

--- a/views/donate.handlebars
+++ b/views/donate.handlebars
@@ -7,7 +7,7 @@
         {{#each flowers}}
           <li class="list-group-item flower-item">
             <span class="flowertext" >{{flower_name}}</span>
-            <img id="flowerImg" src="{{imageurl_large}}" alt="flowers">
+            <img id="flowerImg" src="{{imageurl_large}}" alt="flowers" data-id={{id}}>
             <p>{{description}}</p>
           </li>
         
