--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,12 +1,37 @@
+.input {
+        max-width: 100%;
+} 
 .navbar-inverse{
     background-color: black;
 }
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus{
     background-color: gray;
 }
+#mainLogo {
+    display: block;
+    margin: auto;
+    width: 100%;
+    max-width: 350px;
+    height: 100%;
+    max-height: 175px;
+    border-radius: 8px;
+}
+.navbar-center
+{
+    position: absolute;
+    width: 100%;
+    left: 0;
+    top: 0;
+    text-align: center;
+    color: white;
+}
 .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus{
     background-color: gray;
 }
+.flowerLogo{
+    width: 100%;
+}
+
 body{
     background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
     padding:50px;
