--- a/views/donate.handlebars
+++ b/views/donate.handlebars
@@ -1,8 +1,9 @@
-<div class="container">
+<div class="container-fluid">
+    <!--  Flower Image -->
   <div class="row one">
     <div class="col-sm-2"></div>
     <div class="col-sm-6">
-      <p class="flowerlist">Donate this flower!</p>
+      <p class="flowerlist"></p>
       <hr>
         {{#each flowers}}
           <li class="list-group-item flower-item">
@@ -10,82 +11,66 @@
             <img id="flowerImg" src="{{imageurl_large}}" alt="flowers" data-id={{id}}>
             <p>{{description}}</p>
           </li>
-        
-            <button id="donateButton" class="btn btn-primary pull-right voffset3" type="submit">Donate These Flowers!</button>
-          <br>
+        <br>
+          <button id="donateButton" class="btn btn-primary pull-right voffset3" type="submit">Donate These Flowers!</button>
+      <br>
         {{/each}}
-      
     </div>
-</div>
-
-
-
-<div class="container">
+  </div>
+  <br>
+    <!--user input starts here-->
+  <div id="formContainer" class="row">
     <form class="well span4" id="recipientForm" role="form">
-        <div class="row">
-            <div class="col-lg-4">
-              <h3> Who Would You Like to Donate to? </h3>
-                <div class="form-group">
-                  <label>First Name</label>
-                  <input id="recipientFirst" class="form-control" placeholder="Recipient First Name" type="text">
-              </div>
-
-              <div class="form-group">
-                  <label>Last Name</label>
-                  <input id="recipientLast"class="form-control" placeholder="Recipient Last Name" type="text">
-              </div>
-               <div class="form-group">                
-                  <label>Mailing Address</label> 
-                  <input id="recipientMailing" class="form-control" placeholder="Recipient mailing address" type="text"> 
-              </div>
-
-
-              <div class="form-group">                
-                  <label>Email Address</label> 
-                  <input id="recipientEmail"class="form-control" placeholder="Recipient email address" type="text"> 
-              </div>
-
-              
-
-
-
-            </div>
-    
-            <div class="col-lg-4">
-            <label>Message</label> 
-          <textarea id="message" class="form-control" rows="10"></textarea>
-            </div>
-
-            
+      <!-- Recipient Info -->
+      <div class="col-lg-4">
+      <h3> Who Would You Like to Donate to? </h3>
+      <div class="form-group">
+        <label>First Name</label>
+        <input id="recipientFirst" class="form-control" placeholder="Recipient First Name" type="text">
+      </div>
+      <div class="form-group">
+        <label>Last Name</label>
+        <input id="recipientLast"class="form-control" placeholder="Recipient Last Name" type="text">
+      </div>
+      <div class="form-group">                
+        <label>Mailing Address</label> 
+        <input id="recipientMailing" class="form-control" placeholder="Recipient mailing address" type="text"> 
+      </div>
+      <div class="form-group">              
+        <label>Email Address</label> 
+        <input id="recipientEmail"class="form-control" placeholder="Recipient email address" type="text"> 
+      </div>
+      </div>
+      <!-- Message Goes Here -->
+      <div class="col-lg-4">
+        <label>Message</label> 
+        <textarea id="message" class="form-control" rows="10"></textarea>
+      </div>   
+      <!-- Donor Info  -->
+      <div class="row col-lg-4">
+      <h4> Add Your Information Here! </h4>
+        <div class="form-group">
+          <label>Donor First Name</label>
+          <input id="donorFirst" class="form-control" placeholder="Donor First Name" type="text"> 
         </div>
+        <div class="form-group">
+          <label>Donor Last Name</label>
+          <input id="donorLast" class="form-control" placeholder="Donor Last Name" type="text"> 
+        </div>
+        <div class="form-group">
+          <label>Donor Email</label>
+          <input id="donorEmail" class="form-control" placeholder="Donor Email" type="text"> 
+        </div>
+        <div class="form-group">
+          <label>Donor User Name</label>
+          <input id="donorUser" class="form-control" placeholder="Donor User Name" type="text"> 
+        </div>
+          <button id="submitButton" class="btn btn-primary pull-right voffset3" type="submit">Submit</button>
+      </div>
     </form>
+  </div>
 </div>
 
-<div class="container">
-    <form class="well span4" role="form">
-        <div class="row">
-            <div class="col-lg-4">
-              <h4> Add Your Information Here! </h4>
-                <div class="form-group">
-                      <label>Donor First Name</label>
-                      <input id="donorFirst" class="form-control" placeholder="Donor First Name" type="text"> 
-                </div>
-                <div class="form-group">
-                    <label>Donor Last Name</label>
-                    <input id="donorLast" class="form-control" placeholder="Donor Last Name" type="text"> 
-                </div>
-                <div class="form-group">
-                    <label>Donor Email</label>
-                    <input id="donorEmail" class="form-control" placeholder="Donor Email" type="text"> 
-                </div>
-                <div class="form-group">
-                    <label>Donor User Name</label>
-                    <input id="donorUser" class="form-control" placeholder="Donor User Name" type="text"> 
-                </div>
-              <button id="submitButton" class="btn btn-primary pull-right voffset3" type="submit">Submit</button>
-            </div>
-        </div>
-    </form>
-</div>
+
 
 
