--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,81 +11,30 @@
 	</head>
 
 	<body>
-	<!--nav bar-->
+  <!--nav bar-->
 
     <nav class="navbar navbar-default navbar-inverse" role="navigation">
-        <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-                <a class="navbar-brand" href="#">Flowers</a>
-            </div>
-
-            <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">Donate</a></li>
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <span class="caret"></span></a>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Go Somwhere</a></li>
-                            <li><a href="#">Do Something</a></li>
-                            <li><a href="#">Something else here</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">link</a></li>
-                            <li class="divider"></li>
-                            <li><a href="#">another link</a></li>
-                        </ul>
-                    </li>
-                </ul>
-                <form class="navbar-form navbar-left" role="search">
-                    <div class="form-group">
-                        <input type="text" class="form-control" placeholder="Search">
-                    </div>
-                    <button type="submit" class="btn btn-default">Submit</button>
-                </form>
-                <ul class="nav navbar-nav navbar-right">
-                    <div class="row">
-                        <div class="col-md-12">
-                        </div class="form-group">
-                        <button id="btn-login" class="btn btn-primary btn-margin">
-                                         Log In
-                                         </button>
-                        <!-- <div class="form-group">
-											 <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-                                            </div> -->
-                        <button id="btn-logout" class="btn btn-primary btn-margin">
-                                         Log Out
-                                         </button>
-                    </div>
-                    </form>
-            </div>
-
+      <div class="container-fluid navbar-header">
+        <a class="navbar-brand" href="/">Flowers</a>
+      </div>
+      <div class="navbar-center" id="navbarText">
+        Philanthropic Florists
+        <br>
+        Help Us by Helping Others!
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <div class="col-md-12">
+          <button id="LoginButton" class="btn btn-primary btn-margin">Log In
+          </button>
+          <button id="LogoutButton" class="btn btn-primary btn-margin">Log Out
+          </button>
         </div>
-        </li>
-        </ul>
-        </li>
-        </ul>
-        </div>
-        <!-- /.navbar-collapse -->
-        </div>
-        <!-- /.container-fluid -->
+      </ul>       
     </nav>
 
 <!-- JUMBO -->
     <div class="container">
-        <div class="jumbotron">
-            <div class="row main-title">
-                <h1 class="animated pulse"><a href="index.html">Philanthropic Florists</a></h1>
-                <p>Help us by helping others! Dontate flowers today.</p>
-            </div>
-        </div>
+      <img id="mainLogo" src="/assets/images/largeFlowerLogo.png" alt="Flower Logo">
     </div>
 
 	
