committing to pull

--- a/views/donate.handlebars
+++ b/views/donate.handlebars
@@ -19,7 +19,7 @@
   </div>
   <br>
     <!--user input starts here-->
-  <div id="formContainer" class="row">
+  <div id="formContainer Container" class="row">
     <form class="well span4" id="recipientForm" role="form">
       <!-- Recipient Info -->
       <div class="col-lg-4">
