--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -1,14 +1,31 @@
 .input {
         max-width: 100%;
 } 
-.navbar-inverse{
-    background-color: black;
+
+.navbar-brand{
+    display: block;
+    max-width: 100px;
+    max-height: 100px;
+    padding: 40px;
+    margin: -5px;
+    color: #7D1935;
+}
+
+.navbar{
+    max-width: 100%;
+    width: 100%;
+    float: left;
+    margin: 0 0 3em 0;
+    padding-bottom: 20px;
+    background-color: #F5F3EE;
+    border: none;
 }
 .navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus{
     background-color: gray;
 }
+
 #mainLogo {
-    display: block;
+    display: inline-flex;
     margin: auto;
     width: 100%;
     max-width: 350px;
@@ -23,84 +40,31 @@
     left: 0;
     top: 0;
     text-align: center;
-    color: white;
+    color: #4A96AD;
+
 }
 .navbar-nav>.open>a, .navbar-inverse .navbar-nav>.open>a:hover, .navbar-inverse .navbar-nav>.open>a:focus{
     background-color: gray;
 }
-.flowerLogo{
-    width: 100%;
-}
+
 
 body{
-    background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+    background: #F5F3EE;
+    font-family: 'Spectral SC', serif;
     padding:50px;
 }
-
-#login-dp{
-    min-width: 250px;
-    padding: 14px 14px 0;
-    overflow:hidden;
-    background-color:rgba(255,255,255,.8);
-}
-#login-dp .help-block{
-    font-size:12px    
-}
-#login-dp .bottom{
-    background-color:rgba(255,255,255,.8);
-    border-top:1px solid #ddd;
-    clear:both;
-    padding:14px;
-}
-#login-dp .social-buttons{
-    margin:12px 0    
-}
-#login-dp .social-buttons a{
-    width: 49%;
-}
-#login-dp .form-group {
-    margin-bottom: 10px;
-}
-.btn-fb{
-    color: #fff;
-    background-color:#3b5998;
-}
-.btn-fb:hover{
-    color: #fff;
-    background-color:#496ebc 
-}
-.btn-tw{
-    color: #fff;
-    background-color:#55acee;
-}
-.btn-tw:hover{
-    color: #fff;
-    background-color:#59b5fa;
-}
-@media(max-width:768px){
-    #login-dp{
-        background-color: inherit;
-        color: #fff;
-    }
-    #login-dp .bottom{
-        background-color: inherit;
-        border-top:0 none;
-    }
-}
-
 .flower-item {
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-direction: column;
-    background-color: #BADA55;
+    background-color: #4A96AD;
     box-shadow: inset 0 0 5px rgba(0, 0, 0, .55);
 }
 
 .flowertext {
     background-color: mintcream; 
     padding: 30px;
-    border-radius: 45%;
     min-width: 65px;
 }
 
@@ -116,7 +80,7 @@ body{
 }
 
 .main-title {
-    display: flex;
+    display: inline-flex;
     justify-content: center;
     align-items: center; 
     padding: 30px;
@@ -129,3 +93,67 @@ body{
 .valid {
     color:green;
 }
+
+#LoginButton{
+    margin: 15px;
+}
+
+#LogoutButton{
+    margin: 15px;
+}
+
+#navbarText{
+    margin-top: 10px;
+    color: #4A96AD;
+    font-family: 'Satisfy', cursive;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.btn{
+    background-color: #4A96AD;
+    border: none;
+    color: #F5F3EE;
+}
+
+hr { 
+    display: block;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
+    margin-left: auto;
+    margin-right: auto;
+    border-style: inset;
+    border-width: 1px;
+}
+
+#flowerName{
+    color: #4A96AD;
+    font-family: garamond;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+#flowerDesc{
+    color: #F5F3EE;
+    font-family: georgia;
+    font-size: 20px;
+}
+
+#teamName{
+    font-size: 30px
+}
+
+/*CSS for sticky footer*/
+html, body {
+  height: 100%;
+}
+body {
+  display: flex;
+  flex-direction: column;
+}
+#content {
+  flex: 1 0 auto;
+}
+
+
+   
