removed config from gitignore, updated index.js

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
 
 		<script src="https://code.jquery.com/jquery.js"></script>
         <!-- jquery form validator -->
-    <script src="http://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.js"></script>
+    <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.js"></script>
 		<script src="/assets/js/index.js"></script>
         <script src="/assets/js/donate.js"></script>
 	</head>
@@ -22,7 +22,9 @@
     <nav class="navbar navbar-default" role="navigation">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="/">Flowers</a>
+          <div class="nav navbar-nav navbar-left">
+            <a id="flowerHome" href="/">Home</a>            
+          </div>        
         </div>
         <div class="navbar-center" id="navbarText"> 
           <div id="teamName">
