--- a/views/donate.handlebars
+++ b/views/donate.handlebars
@@ -57,7 +57,9 @@
             </div>   
             <!-- Donor Info  -->
             <div class="col-lg-12">
-            <hr>
+            <br>
+            <hr id="break">
+            <br>
               <div class="form-group">
                 <label>Donor First Name</label>
                 <input name="donorFirst" id="donorFirst" class="form-control" placeholder="Donor First Name" type="text" required> 
@@ -81,9 +83,19 @@
         </div>
       </div>
       <div class="col-sm-2"></div>      
-    </div>  
+    </div>
+  <div class="row">
+    <div class="col-sm-2"></div>
+      <div class="col-sm-8">
+        <div id="confirm" class="panel panel-default">
+          <div class="panel-body span4 text-center">
+            <div id="confirmInfo"></div>
+          </div>
+        </div>
+      </div>
+    <div class="col-sm-2"></div>
+  </div>
 </div>
-
 
 
 
